--- a/MiAPR_SelfLearning/MiAPR_SelfLearning.vcxproj
+++ b/MiAPR_SelfLearning/MiAPR_SelfLearning.vcxproj
@@ -145,19 +145,39 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AboutDialog.h" />
+    <ClInclude Include="Dialog.h" />
+    <ClInclude Include="DialogManager.h" />
+    <ClInclude Include="DrawingLogic.h" />
+    <ClInclude Include="ImageVector.h" />
+    <ClInclude Include="ImageVectorsRegion.h" />
+    <ClInclude Include="MainWindow.h" />
     <ClInclude Include="MiAPR_SelfLearning.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="SelfLearningLogic.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="Window.h" />
+    <ClInclude Include="WindowManager.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="AboutDialog.cpp" />
+    <ClCompile Include="Dialog.cpp" />
+    <ClCompile Include="DialogManager.cpp" />
+    <ClCompile Include="DrawingLogic.cpp" />
+    <ClCompile Include="ImageVector.cpp" />
+    <ClCompile Include="ImageVectorsRegion.cpp" />
+    <ClCompile Include="MainWindow.cpp" />
     <ClCompile Include="MiAPR_SelfLearning.cpp" />
+    <ClCompile Include="SelfLearningLogic.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Window.cpp" />
+    <ClCompile Include="WindowManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="MiAPR_SelfLearning.rc" />
