--- a/MiAPR_SelfLearning/MiAPR_SelfLearning.vcxproj.filters
+++ b/MiAPR_SelfLearning/MiAPR_SelfLearning.vcxproj.filters
@@ -13,6 +13,15 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Windows">
+      <UniqueIdentifier>{d9e60c21-4eba-4994-883c-41f6434c0bae}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Dialogs">
+      <UniqueIdentifier>{4e75971a-4ad7-450d-8547-447756b075e4}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Self-Learning">
+      <UniqueIdentifier>{8289151f-7bcc-4985-84a3-c48705c35bb0}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
@@ -30,12 +39,72 @@
     <ClInclude Include="MiAPR_SelfLearning.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
+    <ClInclude Include="Window.h">
+      <Filter>Windows</Filter>
+    </ClInclude>
+    <ClInclude Include="MainWindow.h">
+      <Filter>Windows</Filter>
+    </ClInclude>
+    <ClInclude Include="WindowManager.h">
+      <Filter>Windows</Filter>
+    </ClInclude>
+    <ClInclude Include="Dialog.h">
+      <Filter>Dialogs</Filter>
+    </ClInclude>
+    <ClInclude Include="DialogManager.h">
+      <Filter>Dialogs</Filter>
+    </ClInclude>
+    <ClInclude Include="AboutDialog.h">
+      <Filter>Dialogs</Filter>
+    </ClInclude>
+    <ClInclude Include="ImageVector.h">
+      <Filter>Self-Learning</Filter>
+    </ClInclude>
+    <ClInclude Include="ImageVectorsRegion.h">
+      <Filter>Self-Learning</Filter>
+    </ClInclude>
+    <ClInclude Include="SelfLearningLogic.h">
+      <Filter>Self-Learning</Filter>
+    </ClInclude>
+    <ClInclude Include="DrawingLogic.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
     <ClCompile Include="MiAPR_SelfLearning.cpp">
+      <Filter>Файлы исходного кода</Filter>
+    </ClCompile>
+    <ClCompile Include="Window.cpp">
+      <Filter>Windows</Filter>
+    </ClCompile>
+    <ClCompile Include="MainWindow.cpp">
+      <Filter>Windows</Filter>
+    </ClCompile>
+    <ClCompile Include="WindowManager.cpp">
+      <Filter>Windows</Filter>
+    </ClCompile>
+    <ClCompile Include="Dialog.cpp">
+      <Filter>Dialogs</Filter>
+    </ClCompile>
+    <ClCompile Include="DialogManager.cpp">
+      <Filter>Dialogs</Filter>
+    </ClCompile>
+    <ClCompile Include="AboutDialog.cpp">
+      <Filter>Dialogs</Filter>
+    </ClCompile>
+    <ClCompile Include="ImageVector.cpp">
+      <Filter>Self-Learning</Filter>
+    </ClCompile>
+    <ClCompile Include="ImageVectorsRegion.cpp">
+      <Filter>Self-Learning</Filter>
+    </ClCompile>
+    <ClCompile Include="SelfLearningLogic.cpp">
+      <Filter>Self-Learning</Filter>
+    </ClCompile>
+    <ClCompile Include="DrawingLogic.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
   </ItemGroup>
