--- a/MiAPR_SelfLearning/MiAPR_SelfLearning.vcxproj.filters
+++ b/MiAPR_SelfLearning/MiAPR_SelfLearning.vcxproj.filters
@@ -67,7 +67,10 @@
       <Filter>Self-Learning</Filter>
     </ClInclude>
     <ClInclude Include="DrawingLogic.h">
-      <Filter>Заголовочные файлы</Filter>
+      <Filter>Self-Learning</Filter>
+    </ClInclude>
+    <ClInclude Include="ChooseVectorsCountDialog.h">
+      <Filter>Dialogs</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -105,7 +108,10 @@
       <Filter>Self-Learning</Filter>
     </ClCompile>
     <ClCompile Include="DrawingLogic.cpp">
-      <Filter>Файлы исходного кода</Filter>
+      <Filter>Self-Learning</Filter>
+    </ClCompile>
+    <ClCompile Include="ChooseVectorsCountDialog.cpp">
+      <Filter>Dialogs</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
